# Grpc_System_Info

./: .gitattributes  .gitignore  Project1.sln
Project1/: CMakeLists.txt  FileName.cpp  Logger.cpp  Logger.h  Project1.vcxproj  Project1.vcxproj.filters  SysInfo.grpc.pb.cc  SysInfo.grpc.pb.h  SysInfo.pb.cc  SysInfo.pb.h  SysInfo.proto  ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  getsysinfo.cpp  main.cpp  server.cpp  server.crt  server.csr  server.key  server_cert.cnf  sysinfo.cpp  sysinfo.h
Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  vc143.idb
Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project1/x64/Release/: Project1.exe.recipe  Project1.vcxproj.FileListAbsolute.txt  vc143.idb
Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
enc_temp_folder/58f4277411f38bafcab654948fe87b0/: main.cpp
